# ce365-agent

./: .env.docker.example  .env.example  .env.installed  .gitignore  CHANGELOG_HYBRID.md  CHANGELOG_v0.2.md  DISCLAIMER.txt  EDITION_FEATURES.md  HYBRID_ARCHITECTURE.md  INSTALL.html  INSTALL.md  LICENSE  PRIVACY.md  QUICK_START.md  README.md  README_DE.md  README_DOCKER.md  SECURITY.md  SECURITY_AUDIT.md  TEST_RESULTS.md  TOOL_STATUS.md  auto_demo_test.py  ce365.spec  debug_learning.py  demo_test.py  docker-compose.learning-db.yml  docker-compose.yml  generate_docs.py  install.bat  install.sh  live_test.py  live_test_learning.py  live_test_learning_fixed.py  live_test_phase2.py  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt  setup.py  start.sh  (+5 more)
.github/workflows/: build.yml  release.yml  test.yml
api/: Dockerfile  README.md  config.py  main.py  requirements.txt
api/middleware/: logging.py  rate_limit.py
api/models/: __init__.py  case.py  conversation.py  database.py  message.py  tool_call.py  user.py
api/routers/: auth.py  chat.py  health.py  learning.py  tools.py  users.py
api/schemas/: __init__.py  case.py  conversation.py  message.py  tool_call.py  user.py
api/services/: auth_service.py  chat_service.py  license_service.py
ce365/: __main__.py  __version__.py
ce365/config/: secrets.py  settings.py  system_prompt.py
ce365/core/: agents.py  bot.py  client.py  command_runner.py  commands.py  health.py  license.py  providers.py  routines.py  selftest.py  session.py  ssh.py  system_fingerprint.py  updater.py  (+2 more)
docs/: DEPLOYMENT_CLOUDFLARE.md  DEPLOYMENT_OVERVIEW.md  DEPLOYMENT_TAILSCALE.md  DEPLOYMENT_VPN.md  EDITION_VERGLEICH.md  INSTALLATION.md  LEARNING_PHASE1_COMPLETE.md  LEARNING_SYSTEM.md  LICENSE_ENFORCEMENT_API.md  NUTZUNGSANLEITUNG.md  PII_DETECTION.md  PRODUKTBESCHREIBUNG.md  PROJEKTBESCHREIBUNG.md  REMOTE_DB_SETUP.md  REMOTE_DB_SUMMARY.md  SETUP_WIZARD.md  TOOL_ROADMAP.md  VORLAGEN.md  WORKFLOW.md
license-server/: admin.html  config.py  docker-compose.yml  main.py  models.py  requirements.txt
scripts/: build_release.py  create_package.py  generate_exports.py  smoke_test_binary.py  update.sh
techcare/: __main__.py  __version__.py
tests/: conftest.py
tools/: migrate_cases.py
web/: Dockerfile  README.md  package.json  tailwind.config.ts
website/: agb.html  app.js  danke.html  datenschutz.html  impressum.html  index.html  style.css  widerruf.html
(+187 files in other folders)
