[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ce365-agent"
version = "2.0.0"
description = "AI-powered IT maintenance assistant for Windows/macOS — diagnostics, repair, documentation"
readme = "README.md"
license = {text = "BSL-1.1"}
requires-python = ">=3.11"
authors = [
    {name = "Carsten Eckhardt", email = "info@eckhardt-marketing.de"},
]
keywords = ["it-maintenance", "diagnostics", "ai-agent", "sysadmin", "msp", "audit", "repair"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: Other/Proprietary License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "anthropic>=0.30.0",
    "openai>=1.0.0",
    "psutil>=5.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "keyring>=24.0.0",
    "bcrypt>=4.0.0",
    "httpx>=0.25.0",
    "aiosqlite>=0.19.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "cryptography>=41.0.0",
    "duckduckgo-search>=5.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "fpdf2>=2.7.0",
]

[project.optional-dependencies]
pii = [
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "spacy>=3.7.0",
]
mysql = [
    "pymysql>=1.1.0",
]
postgres = [
    "psycopg2-binary>=2.9.0",
]
remote = [
    "asyncssh>=2.14.0",
    "pypsrp>=0.8.0",
]
all = [
    "ce365-agent[pii,mysql,postgres,remote]",
]

[project.urls]
Homepage = "https://agent.ce365.de"
Documentation = "https://agent.ce365.de"
Repository = "https://github.com/eckhardt77/ce365-agent"
Issues = "https://github.com/eckhardt77/ce365-agent/issues"

[project.scripts]
ce365 = "ce365.__main__:main"

[tool.setuptools.packages.find]
include = ["ce365*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
